--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-# Basic
-title: 潘柏信
+﻿# Basic
+title: 章鹏
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: qingfenghong
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: 嵌入式 / 音视频系统
+url: "http://qingfenghong.io"
 
 # Comment
 comment:
@@ -15,20 +15,20 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+   # weibo: 5366874726 
+    github: qingfenghong
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: pengzhang199007@qq.com
 
 # 百度统计 
 # 使用博客模板请去掉或者更换 id 
 baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+    id:   
 
 # Google Analytics
 # 使用博客模板请去掉或者更换 id
 ga:
-    id: UA-84134159-3   
+    id:    
     host: auto  
 
 
