--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url: "http://qingfenghong.io"
 
 # Comment
 comment:
-    disqus: leopard
+    disqus: qingfenghong
     # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
